--- a/index.html
+++ b/index.html
@@ -20,25 +20,80 @@
       rel="stylesheet"
     />
 
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <link rel="stylesheet" href="/css/global.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Frontend Mentor | Social Media Dashboard</title>
   </head>
   <body>
-    Social Media Dashboard Total Followers: 23,004 Dark Mode @nathanf 1987
-    Followers 12 Today @nathanf 1044 Followers 99 Today @realnathanf 11k
-    Followers 1099 Today Nathan F. 8239 Subscribers 144 Today Overview - Today
-    Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile Views 52k 1375%
-    Retweets 117 303% Likes 507 553% Likes 107 19% Total Views 1407 12%
+    <nav>
+      <div class="db-heading">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: 23,004</p>
+      </div>
+      <div class="dm-toggle">
+        <p>Dark Mode</p>
+        <div class="toggle-switch">
+          <input type="checkbox" id="switch" />
+          <label for="switch"></label>
+        </div>
+      </div>
+    </nav>
+
+    <div class="big-cards-container">
+      <div class="card facebook">
+        <div class="username">
+          <img src="/images/icon-facebook.svg" alt="facebook-icon" />
+          <p>@nathanf</p>
+        </div>
+        <div class="follower-count">1987</div>
+        <div class="follower-text">Followers</div>
+        <div class="metric">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>12 Today</p>
+        </div>
+      </div>
+      <div class="card twitter">
+        <div class="username">
+          <img src="/images/icon-twitter.svg" alt="twitter-icon" />
+          <p>@nathanf</p>
+        </div>
+        <div class="follower-count">1044</div>
+        <div class="follower-text">Followers</div>
+        <div class="metric">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>98 Today</p>
+        </div>
+      </div>
+      <div class="card instagram">
+        <div class="username">
+          <img src="/images/icon-instagram.svg" alt="instagram-icon" />
+          <p>@realnathanf</p>
+        </div>
+        <div class="follower-count">11k</div>
+        <div class="follower-text">Followers</div>
+        <div class="metric">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>1099 Today</p>
+        </div>
+      </div>
+      <div class="card youtube">
+        <div class="username">
+          <img src="/images/icon-youtube.svg" alt="youtube-icon" />
+          <p>Nathan F.</p>
+        </div>
+        <div class="follower-count">8239</div>
+        <div class="follower-text">Subscribers</div>
+        <div class="metric">
+          <img src="/images/icon-down.svg" alt="going-down" />
+          <p>144 Today</p>
+        </div>
+      </div>
+    </div>
+
+    144 Today Overview - Today Page Views 87 3% Likes 52 2% Likes 5462 2257%
+    Profile Views 52k 1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total
+    Views 1407 12%
 
     <div class="attribution">
       Challenge by
