--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <title>Frontend Mentor | Social Media Dashboard</title>
   </head>
   <body>
-    <nav>
+    <div class="top-bar"></div>
+    <div class="nav">
       <div class="db-heading">
         <h1>Social Media Dashboard</h1>
         <p>Total Followers: 23,004</p>
       </div>
+      <hr class="line" />
       <div class="dm-toggle">
         <p>Dark Mode</p>
         <div class="toggle-switch">
@@ -38,12 +40,16 @@
           <label for="switch"></label>
         </div>
       </div>
-    </nav>
+    </div>
 
     <div class="big-cards-container">
       <div class="card facebook">
         <div class="username">
-          <img src="/images/icon-facebook.svg" alt="facebook-icon" />
+          <img
+            class="social-icons"
+            src="/images/icon-facebook.svg"
+            alt="facebook-icon"
+          />
           <p>@nathanf</p>
         </div>
         <div class="follower-count">1987</div>
@@ -55,7 +61,11 @@
       </div>
       <div class="card twitter">
         <div class="username">
-          <img src="/images/icon-twitter.svg" alt="twitter-icon" />
+          <img
+            class="social-icons"
+            src="/images/icon-twitter.svg"
+            alt="twitter-icon"
+          />
           <p>@nathanf</p>
         </div>
         <div class="follower-count">1044</div>
@@ -67,7 +77,11 @@
       </div>
       <div class="card instagram">
         <div class="username">
-          <img src="/images/icon-instagram.svg" alt="instagram-icon" />
+          <img
+            class="social-icons"
+            src="/images/icon-instagram.svg"
+            alt="instagram-icon"
+          />
           <p>@realnathanf</p>
         </div>
         <div class="follower-count">11k</div>
@@ -79,27 +93,173 @@
       </div>
       <div class="card youtube">
         <div class="username">
-          <img src="/images/icon-youtube.svg" alt="youtube-icon" />
+          <img
+            class="social-icons"
+            src="/images/icon-youtube.svg"
+            alt="youtube-icon"
+          />
           <p>Nathan F.</p>
         </div>
         <div class="follower-count">8239</div>
         <div class="follower-text">Subscribers</div>
         <div class="metric">
           <img src="/images/icon-down.svg" alt="going-down" />
-          <p>144 Today</p>
+          <p class="down">144 Today</p>
         </div>
       </div>
     </div>
 
-    144 Today Overview - Today Page Views 87 3% Likes 52 2% Likes 5462 2257%
-    Profile Views 52k 1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total
-    Views 1407 12%
+    <h2>Overview - Today</h2>
+    <div class="small-card-container">
+      <div class="small-card">
+        <div class="card-title">Page Views</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-facebook.svg"
+            alt="facebook-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>87</p>
+        </div>
+        <div class="card-rate">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>3%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Likes</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-facebook.svg"
+            alt="facebook-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>52</p>
+        </div>
+        <div class="card-rate">
+          <img src="/images/icon-down.svg" alt="going-down" />
+          <p class="down">2%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Likes</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-instagram.svg"
+            alt="instagram-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>5462</p>
+        </div>
+
+        <div class="card-rate">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>2257%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Profile Views</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-instagram.svg"
+            alt="instagram-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>52k</p>
+        </div>
+
+        <div class="card-rate">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>1375%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Retweets</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-twitter.svg"
+            alt="twitter-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>117</p>
+        </div>
+
+        <div class="card-rate">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>303%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Likes</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-twitter.svg"
+            alt="twitter-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>507</p>
+        </div>
+
+        <div class="card-rate">
+          <img src="/images/icon-up.svg" alt="going-up" />
+          <p>553%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Likes</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-youtube.svg"
+            alt="twitter-icon"
+          />
+        </div>
+        <div class="card-count">
+          <p>107</p>
+        </div>
+
+        <div class="card-rate">
+          <img src="/images/icon-down.svg" alt="going-down" />
+          <p class="down">19%</p>
+        </div>
+      </div>
+      <div class="small-card">
+        <div class="card-title">Total Views</div>
+        <div class="card-icon">
+          <img
+            class="social-icons"
+            src="/images/icon-youtube.svg"
+            alt="youtube"
+          />
+        </div>
+        <div class="card-count">
+          <p>1407</p>
+        </div>
+
+        <div class="card-rate">
+          <img src="/images/icon-down.svg" alt="going-down" />
+          <p class="down">12%</p>
+        </div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://www.github.com/archihalder">Archi Halder</a>.
     </div>
   </body>
 </html>
