--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="/css/global.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/breakpoint.css" />
 
     <title>Frontend Mentor | Social Media Dashboard</title>
   </head>
