--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/breakpoint.css" />
+    <link rel="stylesheet" type="text/css" href="/css/global.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/breakpoint.css" />
 
     <title>Frontend Mentor | Social Media Dashboard</title>
   </head>
