--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="big-cards-container">
-      <div class="card facebook">
+      <div class="big card facebook">
         <div class="username">
           <img
             class="social-icons"
@@ -53,14 +53,14 @@
           />
           <p>@nathanf</p>
         </div>
-        <div class="follower-count">1987</div>
+        <div class="follower-count num">1987</div>
         <div class="follower-text">Followers</div>
         <div class="metric">
           <img src="/images/icon-up.svg" alt="going-up" />
           <p>12 Today</p>
         </div>
       </div>
-      <div class="card twitter">
+      <div class="big card twitter">
         <div class="username">
           <img
             class="social-icons"
@@ -69,14 +69,14 @@
           />
           <p>@nathanf</p>
         </div>
-        <div class="follower-count">1044</div>
+        <div class="follower-count num">1044</div>
         <div class="follower-text">Followers</div>
         <div class="metric">
           <img src="/images/icon-up.svg" alt="going-up" />
           <p>98 Today</p>
         </div>
       </div>
-      <div class="card instagram">
+      <div class="big card instagram">
         <div class="username">
           <img
             class="social-icons"
@@ -85,14 +85,14 @@
           />
           <p>@realnathanf</p>
         </div>
-        <div class="follower-count">11k</div>
+        <div class="follower-count num">11k</div>
         <div class="follower-text">Followers</div>
         <div class="metric">
           <img src="/images/icon-up.svg" alt="going-up" />
           <p>1099 Today</p>
         </div>
       </div>
-      <div class="card youtube">
+      <div class="big card youtube">
         <div class="username">
           <img
             class="social-icons"
@@ -101,7 +101,7 @@
           />
           <p>Nathan F.</p>
         </div>
-        <div class="follower-count">8239</div>
+        <div class="follower-count num">8239</div>
         <div class="follower-text">Subscribers</div>
         <div class="metric">
           <img src="/images/icon-down.svg" alt="going-down" />
@@ -112,7 +112,7 @@
 
     <h2>Overview - Today</h2>
     <div class="small-card-container">
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Page Views</div>
         <div class="card-icon">
           <img
@@ -121,7 +121,7 @@
             alt="facebook-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>87</p>
         </div>
         <div class="card-rate">
@@ -129,7 +129,7 @@
           <p>3%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Likes</div>
         <div class="card-icon">
           <img
@@ -138,7 +138,7 @@
             alt="facebook-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>52</p>
         </div>
         <div class="card-rate">
@@ -146,7 +146,7 @@
           <p class="down">2%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Likes</div>
         <div class="card-icon">
           <img
@@ -155,7 +155,7 @@
             alt="instagram-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>5462</p>
         </div>
 
@@ -164,7 +164,7 @@
           <p>2257%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Profile Views</div>
         <div class="card-icon">
           <img
@@ -173,7 +173,7 @@
             alt="instagram-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>52k</p>
         </div>
 
@@ -182,7 +182,7 @@
           <p>1375%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Retweets</div>
         <div class="card-icon">
           <img
@@ -191,7 +191,7 @@
             alt="twitter-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>117</p>
         </div>
 
@@ -200,7 +200,7 @@
           <p>303%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Likes</div>
         <div class="card-icon">
           <img
@@ -209,7 +209,7 @@
             alt="twitter-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>507</p>
         </div>
 
@@ -218,7 +218,7 @@
           <p>553%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Likes</div>
         <div class="card-icon">
           <img
@@ -227,7 +227,7 @@
             alt="twitter-icon"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>107</p>
         </div>
 
@@ -236,7 +236,7 @@
           <p class="down">19%</p>
         </div>
       </div>
-      <div class="small-card">
+      <div class="small card">
         <div class="card-title">Total Views</div>
         <div class="card-icon">
           <img
@@ -245,7 +245,7 @@
             alt="youtube"
           />
         </div>
-        <div class="card-count">
+        <div class="card-count num">
           <p>1407</p>
         </div>
 
@@ -262,5 +262,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://www.github.com/archihalder">Archi Halder</a>.
     </div>
+
+    <script src="/js/script.js"></script>
   </body>
 </html>
